# derna

./: CMakeLists.txt  LICENSE  README.md
Data/InputFiles/: intl11.csv  intl11_H.csv  intl22.csv  mismatch1nI.csv  mismatch1nI_H.csv  mismatch23I.csv  stack.csv  stack_H.csv
Data/RNA/: P15421_rna.txt
Data/uniprotSeq/: A6NFE2.fasta  A6NH11.fasta  A6NKF1.fasta  C9J798.fasta  O14880.fasta  O60721.fasta  O75151.fasta  P01707.fasta  P01860.fasta  P07947.fasta  P31949.fasta  P40222.fasta  P47211.fasta  P51805.fasta  P54098.fasta  P78345.fasta  P78382.fasta  Q06187.fasta  Q13087.fasta  Q13155.fasta  Q14442.fasta  Q15147.fasta  Q15465.fasta  Q16690.fasta  Q3MIR4.fasta  Q494X3.fasta  Q5SWX8.fasta  Q5T749.fasta  Q5T7N8.fasta  Q5TZJ5.fasta  Q6PF06.fasta  Q6UXY8.fasta  Q6ZRS4.fasta  Q86TJ5.fasta  Q8IW19.fasta  Q8N1G4.fasta  Q8NB90.fasta  Q8NC38.fasta  Q8NH43.fasta  Q8TDG2.fasta  (+16 more)
data/InputFiles/: intl21.csv  intl21_H.csv  intl22_H.csv  miscellaneous.csv  mismatchH.csv  mismatchH_H.csv  mismatchI.csv  mismatchI_H.csv  sample_codon_usage.csv
data/uniprotSeq/: O75509.fasta  O95867.fasta  P05160.fasta  P0CE72.fasta  P0CL80.fasta  P13501.fasta  P15086.fasta  P15382.fasta  P15421.fasta  P26436.fasta  P30281.fasta  P31645.fasta  P47974.fasta  P49755.fasta  P54852.fasta  P57076.fasta  P78563.fasta  P98173.fasta  Q05901.fasta  Q15669.fasta  Q5VV16.fasta  Q5VYS8.fasta  (+23 more)
src/: BeamZuker.cpp  BeamZuker.h  Nussinov.cpp  Nussinov.h  NussinovAlgorithm.cpp  NussinovAlgorithm.h  Zuker.cpp  Zuker.h  ZukerAlgorithm.cpp  ZukerAlgorithm.h  default.cpp  default.h  main.cpp  utils.cpp  utils.h
(+7 files in other folders)
